more on landing page; layout; styling

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ company:
 links:
   knora: <a href="https://knora.org">Knora</a>
   knora-docs: <a href="https://docs.knora.org">Documentation</a>
+  knora-ui: <a href="https://npmjs.com/~knora">Knora-ui modules</a>
   sipi: <a href="https://sipi.io">Sipi</a>
   salsah: <a href="https://dhlab-basel.github.io/Salsah">Salsah</a>
   dhlab: <a href="http://dhlab.unibas.ch">Digital Humanities Lab</a>
