--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Salsah Documentation
 url: https://dhlab-basel.github.io/Salsah
 version: v2.0.0-alpha.15
-baseurl:
+baseurl: dokumentado
 google_analytics_key:
 show_full_navigation: true
 git:
