--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Salsah documentation
 url: https://dhlab-basel.github.io/Salsah
-version: v2.0.0-alpha
+version: v2.0.0-alpha.14
 baseurl:
 google_analytics_key:
 show_full_navigation: true
@@ -36,7 +36,7 @@ links:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: assets/images/touch-icon.png
-description: Salsah is the generic user interface (front-end) for <a href="https://knora.org">Knora</a> (back-end), which is a software framework for storing, sharing, and working with primary sources and data in the humanities. Both application supports <a href="https://sipi.io">Sipi</a>, our iiif media service.
+description: Salsah is the generic user interface (front-end) for <a href="https://knora.org">Knora</a> (back-end) &mdash; a software framework for storing, sharing, and working with primary sources and data in the humanities. Both application supports <a href="https://sipi.io">Sipi</a> a iiif media service.
 author:
   name: DHLab and DaSCH
   email: info@knora.org
