--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,11 @@
 
 title: Dokumentado
 url: https://lakto.github.io/dokumentado
-version: v1.0.0-alpha
+version: v1.0.0
 baseurl:
 google_analytics_key:
 show_full_navigation: true
+template: https://code.getmdl.io/1.3.0/material.blue_grey-amber.min.css
 git:
   name: Github
   repository: Dokumentado
@@ -36,7 +37,7 @@ links:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: assets/images/touch-icon.png
-description: Dokumentado is a landing page and documentation template for Jekyll, useful for GitHub pages.
+description: Documentation and landing page template for Jekyll, useful for GitHub pages.
 author:
   name: André Kilchenmann
   email: info@lakto.org
